--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,13 +6,13 @@
     height: 30rem;  
     margin:0;
     }
- /*Styling the upper div above the background image and the navigation background*/   
-.upper, .nav 
+ /*Styling the upper div above the background image, the footer and the navigation background*/   
+.upper, .nav, .foot 
     {background-color: rgb(161, 238, 106);
     padding-top: 1%;
     padding-bottom: 1%;}   
 
-/*Styling the text inside the upper div*/
+/*Styling the text inside the upper div and inside the nav*/
 .p-1, .nav a 
     {color:rgb(18, 58, 22); 
     font-size: 2rem;
@@ -30,4 +30,50 @@
 /*styling the hovering effects on the nav*/
  a:hover {text-decoration:underline;}
  a:visited {background-color: rgb(105, 185, 12);}
+
+ /*Styling the divs on home-page*/
+ .intro, .psst {
+    padding-left: 30%;
+    padding-top: 2%;
+    padding-bottom: 3%;
+padding-right: 30%;
+background-color: rgb(233, 243, 209);}
+
+
+ /*Styling the welcome-text in divs on home-page.*/
+ .intro h1 
+    {text-align: center;
+    font-family: impact;
+    font-size: 2.5rem;
+    }
+
+    .psst h2 {text-align: center;
+             font-family: impact;
+            font-size: 1.7rem;}
+
+.intro p, .psst p 
+{font-family: impact;
+font-size: 1.5rem;
+text-align: center;}
+
+.daisy
+{border-radius: 50%;
+width: 5rem;
+height: 5rem;}
+
+#reading 
+{
+width: 40rem;
+height: 25rem;
+    }
+
+
+.foot p
+{color: rgb(18, 58, 22);
+font-family: impact;
+font-size: 1.5rem;
+text-align: center;}
+
+
+
              
