--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@
   padding-right: 15%;
   margin:0;
   font-weight: 500;
-  font-style:Arial;}
+  font-family:Arial;}
 
   .p-1 
   {padding-left:2%;}
@@ -45,26 +45,26 @@
  /*Styling the textcontent in divs on all pages.*/
  .intro h1 
 {text-align: center;
- font-style: Arial;
+ font-family: Arial;
  font-size: 2.5rem;}
 
 .div2 h2
 {text-align: center;
- font-style: Arial;
+ font-family: Arial;
  font-size: 1.7rem;}
 
 .intro p, .div2 p, #contact-form p
-{font-style: Arial;
+{font-family: Arial;
  font-size: 1.5rem;
  text-align: center;}
 
  #quiz h1
- {font-style: Arial;
+ {font-family: Arial;
   font-size: 3rem;
   text-align: center;}
 
  #quiz p
- {font-style:Arial;
+ {font-family:Arial;
   font-size: 1.5rem;
   text-align: center;}
 
@@ -77,7 +77,7 @@
 
 /*Styling the unordered list text since this text did not look good centered.*/
 #list 
-{font-style: Arial;
+{font-family: Arial;
  font-size: 1.5rem;}
     
 /*Styling the images of h1 on all pages*/
@@ -117,7 +117,7 @@ margin-right: 45%;}
  /*Styling the footer content*/
 .foot p
 {color: rgb(18, 58, 22);
- font-style: Arial;
+ font-family: Arial;
  font-size: 1.5rem;
  text-align: center;}             
 
