--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,29 +48,20 @@
  font-family: Arial;
  font-size: 2.5rem;}
 
-.div2 h2
+.div2 h2, #quiz h2
 {text-align: center;
  font-family: Arial;
- font-size: 1.7rem;}
+ font-size: 1.9rem;}
 
-.intro p, .div2 p, #contact-form p
+.intro p, .div2 p, #contact-form p, #quiz p
 {font-family: Arial;
- font-size: 1.5rem;
+ font-size: 1.4rem;
  text-align: center;}
 
- #quiz h1
- {font-family: Arial;
-  font-size: 3rem;
-  text-align: center;}
-
- #quiz p
- {font-family:Arial;
-  font-size: 1.5rem;
-  text-align: center;}
-
-  #submit
-  {margin-right: 45%;
-   margin-left: 45%;}
+ /*Styling the submit button*/
+#submit
+{margin-right: 45%;
+margin-left: 45%;}
 
 /*Placing the forms in the middle*/
   form {display: grid;}
@@ -78,7 +69,7 @@
 /*Styling the unordered list text since this text did not look good centered.*/
 #list 
 {font-family: Arial;
- font-size: 1.5rem;}
+ font-size: 1.4rem;}
     
 /*Styling the images of h1 on all pages*/
 .daisy1, .daisy2
@@ -118,7 +109,7 @@ margin-right: 45%;}
 .foot p
 {color: rgb(18, 58, 22);
  font-family: Arial;
- font-size: 1.5rem;
+ font-size: 1.2rem;
  text-align: center;}             
 
 /*Adding media queries to make the site more responsive*/
