--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,12 +15,12 @@
 /*Styling the text inside the upper div and inside the nav*/
 .p-1, .nav a 
  {color:rgb(21, 94, 28); 
-  font-size: 2rem;
+  font-size: 1.7rem;
   padding-left: 15%;
   padding-right: 15%;
   margin:0;
   font-weight: 500;
-  font-family:Arial;}
+  font-family:Times;}
 
   .p-1 
   {padding-left:2%;}
@@ -28,8 +28,8 @@
 /*Giving the nav some individual styling*/
  .nav a 
  {text-decoration: none;
-  padding-left: 10%;
-  padding-right: 2%;}
+  padding-left: 13%;
+  padding-right:0;}
 
 /*styling the hovering effects on the nav*/
  a:hover {text-decoration:underline;} 
@@ -45,16 +45,16 @@
  /*Styling the textcontent in divs on all pages.*/
  .intro h1 
 {text-align: center;
- font-family: Arial;
+ font-family: Times;
  font-size: 2.5rem;}
 
 .div2 h2, #quiz h2
 {text-align: center;
- font-family: Arial;
+ font-family: Times;
  font-size: 1.9rem;}
 
 .intro p, .div2 p, #contact-form p, #quiz p
-{font-family: Arial;
+{font-family: Times;
  font-size: 1.4rem;
  text-align: center;}
 
@@ -68,7 +68,7 @@ margin-left: 45%;}
 
 /*Styling the unordered list text since this text did not look good centered.*/
 #list 
-{font-family: Arial;
+{font-family: Times;
  font-size: 1.4rem;}
     
 /*Styling the images of h1 on all pages*/
@@ -108,7 +108,7 @@ margin-right: 45%;}
  /*Styling the footer content*/
 .foot p
 {color: rgb(18, 58, 22);
- font-family: Arial;
+ font-family: Times;
  font-size: 1.2rem;
  text-align: center;}             
 
