--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,8 @@
 .p-1, .nav a 
  {color:rgb(21, 94, 28); 
   font-size: 1.7rem;
-  padding-left: 15%;
-  padding-right: 15%;
   margin:0;
-  font-weight: 500;
+  font-weight: 700;
   font-family:Times;}
 
   .p-1 
@@ -61,7 +59,7 @@
  /*Styling the submit button*/
 #submit
 {margin-right: 45%;
-margin-left: 45%;}
+ margin-left: 45%;}
 
 /*Placing the forms in the middle*/
   form {display: grid;}
@@ -71,7 +69,7 @@ margin-left: 45%;}
 {font-family: Times;
  font-size: 1.4rem;}
     
-/*Styling the images of h1 on all pages*/
+/*Styling the images of/in h1 on all pages*/
 .daisy1, .daisy2
 {border-radius: 50%;
  width: 5rem;
@@ -80,14 +78,14 @@ margin-left: 45%;}
  /*Styling images on all pages*/
  #women, #lake, #man, #reading, #feet
 {width:50%;
-padding-left:25%}
+ padding-left:25%}
 
 /*Making the youtube video responsive. To accomplish this I have used a code snippet from the website: ostraining.com*/
 .video
 {overflow: hidden;
-padding-bottom: 56.25%;
-position: relative;
-height: 0;}
+ padding-bottom: 56.25%;
+ position: relative;
+ height: 0;}
 
 .video iframe 
 {left: 0;
@@ -99,11 +97,11 @@ height: 0;}
  /*Styling the contactform*/
  #name, #email, #msg
  {margin-left:20%;
-margin-right:20%;}
+  margin-right:20%;}
 
 #send
 {margin-left: 45%;
-margin-right: 45%;}
+ margin-right: 45%;}
 
  /*Styling the footer content*/
 .foot p
@@ -116,7 +114,7 @@ margin-right: 45%;}
  @media (max-width:710px) 
  {.daisy2 {display:none;}}
 
- @media (max-width:879px){
+ @media (max-width:750px){
  .nav a {font-size: 1rem;
          padding-left: 5%;
          padding-right: 1%;}
