--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@
  a:hover {text-decoration:underline;} 
  
  /*Styling the divs on all pages*/
- .intro, .div2, .video, #quiz, #contact-form
+ .intro, .div2, .video, #question, #contact-form
  {padding-left: 10%;
   padding-top: 0.5%;
   padding-bottom: 3%;
@@ -46,15 +46,128 @@
  font-family: Times;
  font-size: 2.5rem;}
 
-.div2 h2, #quiz h2, #contact-form h2
+.div2 h2, #question h2, #contact-form h2
 {text-align: center;
  font-family: Times;
  font-size: 1.9rem;}
 
-.intro p, .div2 p, #contact-form p, #quiz p
+.intro p, .div2 p, #contact-form p, #question p
 {font-family: Times;
  font-size: 1.4rem;
  text-align: center;}
+
+ /*Styling the spinning wheel*/
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: #34495e;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+}
+
+ .wheel {
+     width: 500px;
+     height: 500px;
+     background-color: #ccc;
+     border-radius: 50%;
+     border: 15px solid #dde;
+     position: relative;
+     overflow: hidden;
+     transition: 5s;
+ }
+
+ .wheel div {
+     height: 50%;
+     width: 200px;
+     position: absolute;
+     clip-path: polygon(100% 0, 50% 100%, 0 0);
+     transform: translateX(-50%);
+     transform-origin: bottom;
+     text-align: center;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     font-size: 20px;
+     font-weight: bold;
+     font-family: sans-serif;
+     color: #fff;
+     left: 135px;}
+
+.wheel .one {
+    background-color: #3fb54f;
+    left: 50%;
+         }
+    
+.wheel .two {
+    background-color: #7824a2;
+    transform: rotate(45deg);
+         }
+    
+.wheel .three {
+    background-color: #e61410;
+    transform: rotate(90deg);
+         }
+    
+.wheel .four {
+    background-color: #7a4242;
+    transform: rotate(135deg);
+         }
+    
+.wheel .five {
+    background-color: #e61410;
+    transform: rotate(180deg);}
+
+.wheel .six {
+background-color: #227a9d;
+transform: rotate(225deg);}
+
+.wheel .seven {
+background-color: #e61410;
+transform: rotate(270deg);}
+
+.wheel .eight {
+background-color: #c8b92d;
+transform: rotate(315deg);}
+
+.pin {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #fff;
+        }
+    
+.pin::before {
+    content: "\1F817";
+    font-size: 50px;}
+
+#spin {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    background-color: #e2e2e2;
+    text-transform: uppercase;
+    border: 8px solid #fff;
+    font-weight: bold;
+    font-size: 20px;
+    color: #a2a2a2;
+    width: 80px;
+    height: 80px;
+    font-family: sans-serif;
+    border-radius: 50%;
+    cursor: pointer;
+    outline: none;
+    letter-spacing: 1px;
+        }
 
  /*Styling the submit button*/
 #submit
